# Aide-memoires

./: .editorconfig  README.md  push.bat  summary.py  test.txt
Aide/: FFmpeg.md  Git.md  ImageMagick.md  Inno_Setup.md  KeePass.md  Makefile.md  README.md  Rufus.md  VS_Code.md  Ventoy.md  bien_coder.md  choisir_langage.md  emmet.md  expressions_rationnelles.md  gcc.md  héberger.md  poo.md
Aide/make/: Makefile  main.c  player.c  player.h
Algorithmie/: README.md
Algorithmie/001_introduction/: note.md
Algorithmie/002_pseudo-code/: note.md
Algorithmie/005_tri_bulle/: note.md
Algorithmie/007_tri_par_insertion/: note.md
Architecture/: README.md
Architecture/01_présentation/: note.md
Architecture/02_systèmes_de_numération/: note.md
Architecture/03_conversion_de_base/: note.md
Architecture/04_mémoire_virtuelle/: note.md
Architecture/05_processeur/: note.md
Assembleur/: README.md
C/: README.md
C++/: README.md
CSharp/: README.md
Django/: README.md
GNU-Linux/: README.md  ubuntu-installer.sh.txt  vbox-montage.sh.txt
HTML-CSS/: README.md
Hacking/: README.md  files.txt
Java/: README.md
JavaScript/: README.md
PHP/: README.md  php.md
Python/: README.md
Python/tutos/demo_distribution/: README.md  setup.cfg
Python/tutos/demo_distribution/src/MonNouveauProjetTest123487.egg-info/: SOURCES.txt
Python/tutos/demo_distribution/src/main/: launch.py
Python/tutos/demo_distribution/src/other/: main.py
SQL/: README.md
Windows/: MARKDOWN.md  README.md  configuration.md  double_amorcage.md  programmes.md  regedit.md  reseaux.md  shell.md
(+772 files in other folders)
