[metadata]
name = MonNouveauProjetTest123487
version = 1.0.0
author = René LaTaupe
description = Un projet inutile
long_description = file: README.md
long_description_content_type = text/markdown
license = LICENSE
classifiers =
    Topic :: Software Development :: Libraries :: pygame
    Natural Language :: French
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
python_requires= >=3.7
install_requires =
    pygame